Add working directory option to Docker node
Adds workingDir parameter to Docker run operation and includes
@n8n/node-cli dependency with updated npm scripts for development

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     },
     "main": "index.js",
     "scripts": {
+        "dev": "n8n-node dev",
         "prepare": "husky",
         "build": "swc src -d dist && ts-node ./scripts/copy.ts",
-        "build:watch": "ts-node ./scripts/copy.ts && swc src -d dist --watch",
-        "lint": "eslint src --ext .ts",
+        "lint": "n8n-node lint",
         "lint:fix": "eslint src --ext .ts --fix",
         "prepublishOnly": "yarn build",
         "release": "standard-version",
@@ -69,6 +69,7 @@
         "jest": "^30.2.0",
         "n8n-core": "^1.0.1",
         "n8n-workflow": "^1.0.1",
+        "@n8n/node-cli": "^0.14.0",
         "prettier": "^3.6.2",
         "standard-version": "^9.5.0",
         "ts-node": "^10.9.2",
