PARTIALLY LINT WORKING: Migrate ESLint config to flat config format
Replace .eslintrc.js with eslint.config.js using the new flat config
format and add required dependencies for compatibility with existing
extends and plugins.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "devDependencies": {
         "@commitlint/cli": "^20.1.0",
         "@commitlint/config-conventional": "^20.0.0",
+        "@eslint/compat": "^1.4.1",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.38.0",
+        "@n8n/node-cli": "^0.14.0",
         "@swc/cli": "^0.7.8",
         "@swc/core": "^1.14.0",
         "@swc/jest": "^0.2.39",
@@ -65,11 +69,11 @@
         "eslint-plugin-n8n-nodes-base": "^1.16.4",
         "eslint-plugin-prettier": "^5.5.4",
         "glob": "^11.0.3",
+        "globals": "^16.4.0",
         "husky": "^9.1.7",
         "jest": "^30.2.0",
         "n8n-core": "^1.0.1",
         "n8n-workflow": "^1.0.1",
-        "@n8n/node-cli": "^0.14.0",
         "prettier": "^3.6.2",
         "standard-version": "^9.5.0",
         "ts-node": "^10.9.2",
