PARTIAL: Replace Prettier JSON config with JS and modernize ESLint setup
Convert .prettierrc to .prettierrc.js with comprehensive formatting
options, replace complex eslint.config.js with minimal config using
@n8n/node-cli, update tsconfig.json with stricter type checking, and add
tool support to Docker and Kubernetes nodes.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "prepare": "husky",
         "build": "swc src -d dist && ts-node ./scripts/copy.ts",
         "lint": "n8n-node lint",
-        "lint:fix": "eslint src --ext .ts --fix",
+        "lint:fix": "n8n-node lint --fix",
         "prepublishOnly": "yarn build",
         "release": "standard-version",
         "commit": "git-cz",
