--- a/package.json
+++ b/package.json
@@ -1,103 +1,95 @@
 {
-    "name": "n8n-nodes-container",
-    "version": "0.1.9",
-    "description": "",
-    "keywords": [
-        "n8n-community-node-package"
-    ],
-    "license": "MIT",
-    "homepage": "https://github.com/joeyboey/n8n-nodes-container.git",
-    "author": {
-        "name": "Yoshino-s",
-        "email": "cy-cui@outlook.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/joeyboey/n8n-nodes-container.git"
-    },
-    "main": "index.js",
-    "scripts": {
-        "dev": "n8n-node dev",
-        "prepare": "husky",
-        "build": "swc src -d dist && ts-node ./scripts/copy.ts",
-        "lint": "n8n-node lint",
-        "lint:fix": "n8n-node lint --fix",
-        "prepublishOnly": "yarn build",
-        "release": "standard-version",
-        "commit": "git-cz",
-        "test": "jest --passWithNoTests"
-    },
-    "files": [
-        "dist"
-    ],
-    "n8n": {
-        "n8nNodesApiVersion": 1,
-        "credentials": [
-            "dist/credentials/DockerCredentials.credentials.js",
-            "dist/credentials/KubernetesCredentials.credentials.js"
-        ],
-        "nodes": [
-            "dist/nodes/Docker/Docker.node.js",
-            "dist/nodes/Kubernetes/Kubernetes.node.js"
-        ]
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^20.1.0",
-        "@commitlint/config-conventional": "^20.0.0",
-        "@eslint/compat": "^1.4.1",
-        "@eslint/eslintrc": "^3.3.1",
-        "@eslint/js": "^9.38.0",
-        "@n8n/node-cli": "^0.14.0",
-        "@swc/cli": "^0.7.8",
-        "@swc/core": "^1.14.0",
-        "@swc/jest": "^0.2.39",
-        "@types/dockerode": "^3.3.45",
-        "@types/glob": "^9.0.0",
-        "@types/jest": "^30.0.0",
-        "@types/request-promise-native": "^1.0.21",
-        "@typescript-eslint/eslint-plugin": "^8.46.2",
-        "@typescript-eslint/parser": "^8.46.2",
-        "chalk": "^5.6.2",
-        "chokidar": "^4.0.3",
-        "commitizen": "^4.2.6",
-        "conventional-changelog-cli": "^5.0.0",
-        "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^9.38.0",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-import-resolver-typescript": "^4.4.4",
-        "eslint-plugin-import": "^2.32.0",
-        "eslint-plugin-n8n-nodes-base": "^1.16.4",
-        "eslint-plugin-prettier": "^5.5.4",
-        "glob": "^11.0.3",
-        "globals": "^16.4.0",
-        "husky": "^9.1.7",
-        "jest": "^30.2.0",
-        "n8n-core": "^1.0.1",
-        "n8n-workflow": "^1.0.1",
-        "prettier": "^3.6.2",
-        "standard-version": "^9.5.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.9.3"
-    },
-    "config": {
-        "commitizen": {
-            "path": "cz-conventional-changelog"
-        }
-    },
-    "commitlint": {
-        "extends": [
-            "@commitlint/config-conventional"
-        ]
-    },
-    "standard-version": {
-        "bumpFiles": [
-            "package.json"
-        ],
-        "header": "# Changelog\n\n"
-    },
-    "dependencies": {
-        "@kubernetes/client-node": "^1.4.0",
-        "@types/node": "^24.9.2",
-        "dockerode": "^4.0.9"
-    }
+	"name": "n8n-nodes-container",
+	"version": "0.1.9",
+	"description": "n8n community nodes for Docker and Kubernetes container orchestration. Run containers, execute pods, and manage containerized workflows directly from n8n.",
+	"keywords": [
+		"n8n-community-node-package"
+	],
+	"license": "MIT",
+	"homepage": "https://github.com/joeyboey/n8n-nodes-container.git",
+	"author": {
+		"name": "Yoshino-s",
+		"email": "cy-cui@outlook.com"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/joeyboey/n8n-nodes-container.git"
+	},
+	"main": "index.js",
+	"scripts": {
+		"dev": "n8n-node dev",
+		"prepare": "husky",
+		"build": "swc src -d dist && ts-node ./scripts/copy.ts",
+		"lint": "n8n-node lint",
+		"lint:fix": "n8n-node lint --fix",
+		"prepublishOnly": "yarn build",
+		"release": "standard-version",
+		"commit": "git-cz",
+		"test": "jest --passWithNoTests"
+	},
+	"files": [
+		"dist"
+	],
+	"n8n": {
+		"n8nNodesApiVersion": 1,
+		"credentials": [
+			"dist/nodes/Docker/DockerCredentials.credentials.js",
+			"dist/nodes/Docker/KubernetesCredentials.credentials.js"
+		],
+		"nodes": [
+			"dist/nodes/Docker/Docker.node.js",
+			"dist/nodes/Kubernetes/Kubernetes.node.js"
+		]
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^20.1.0",
+		"@commitlint/config-conventional": "^20.0.0",
+		"@eslint/compat": "^1.4.1",
+		"@eslint/eslintrc": "^3.3.1",
+		"@eslint/js": "^9.38.0",
+		"@n8n/node-cli": "^0.14.0",
+		"@swc/cli": "^0.7.8",
+		"@swc/core": "^1.14.0",
+		"@swc/jest": "^0.2.39",
+		"@types/dockerode": "^3.3.45",
+		"@types/glob": "^9.0.0",
+		"@types/jest": "^30.0.0",
+		"@types/request-promise-native": "^1.0.21",
+		"@typescript-eslint/eslint-plugin": "^8.46.2",
+		"@typescript-eslint/parser": "^8.46.2",
+		"chalk": "^5.6.2",
+		"chokidar": "^4.0.3",
+		"commitizen": "^4.2.6",
+		"conventional-changelog-cli": "^5.0.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^9.38.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "^2.32.0",
+		"eslint-plugin-n8n-nodes-base": "^1.16.4",
+		"eslint-plugin-prettier": "^5.5.4",
+		"glob": "^11.0.3",
+		"globals": "^16.4.0",
+		"husky": "^9.1.7",
+		"jest": "^30.2.0",
+		"n8n-core": "^1.0.1",
+		"n8n-workflow": "^1.0.1",
+		"prettier": "^3.6.2",
+		"standard-version": "^9.5.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.9.3"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"dependencies": {
+		"@kubernetes/client-node": "^1.4.0",
+		"@types/node": "^24.9.2",
+		"dockerode": "^4.0.9"
+	},
+	"peerDependencies": {
+		"n8n-workflow": "*"
+	}
 }
