--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "n8n-nodes-container",
+	"name": "n8n-nodes-docker-container",
 	"version": "0.2.1",
 	"description": "n8n community nodes for Docker and Kubernetes container orchestration. Run containers, execute pods, and manage containerized workflows directly from n8n.",
 	"keywords": [
